# nickelmod

./: .flake8  .gitignore  Dockerfile  Dockerfile.local  docker-compose.yml  go.mod  go.sum  main.go  nickelmod  pyproject.toml
logging/: logging.go
nickelmod/: __init__.py
tests/: test_nickelmod.py
